@@ -16,15 +16,17 @@
 package org.glowroot.agent.tests.javaagent;
 
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import com.google.common.base.StandardSystemProperty;
 import com.google.common.collect.Lists;
 import com.google.common.io.Resources;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import org.glowroot.agent.it.harness.AppUnderTest;
 import org.glowroot.agent.it.harness.Container;
@@ -34,27 +36,18 @@ public class ClassLoaderLeakIT {
 
     private static Container container;
 
-    @BeforeClass
+    @BeforeAll
     public static void setUp() throws Exception {
         // need memory limited javaagent
-        List<String> extraJvmArgs = Lists.newArrayList();
-        String javaVersion = StandardSystemProperty.JAVA_VERSION.value();
-        if (javaVersion.startsWith("1.6") || javaVersion.startsWith("1.7")) {
-            // limit MaxPermSize for ClassLoaderLeakTest
-            extraJvmArgs.add("-XX:MaxPermSize=64m");
-        } else {
-            // jdk8+ eliminated perm gen, so just limit overall memory
-            extraJvmArgs.add("-Xmx64m");
-        }
-        container = JavaagentContainer.createWithExtraJvmArgs(extraJvmArgs);
+        container = JavaagentContainer.createWithExtraJvmArgs(Collections.singletonList("-Xmx64m"));
     }
 
-    @AfterClass
+    @AfterAll
     public static void tearDown() throws Exception {
         container.close();
     }
 
-    @After
+    @AfterEach
     public void afterEachTest() throws Exception {
         container.checkAndReset();
     }
